--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Robotics Engineer"
   location         : "Chippenham, UK"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=OKPy65EAAAAJ"
   email            :
   uri              :
   bitbucket        :
