--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Andreas Lydakis"
 description              : &description "Robotics Engineer"
 url                      : https://andlydakis.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "AndLydakis/andlydakis.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Andreas Lydakis"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Robotics Engineer"
   location         : "Chippenham, UK"
   employer         :
