--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ analytics:
 author:
   name             : "Andreas Lydakis"
   avatar           : "profile.jpg"
-  bio              : "Robotics Engineer"
-  location         : "Chippenham, UK"
+  bio              : "Senior Software Enginer - Scania Group"
+  location         : "Stockholm, Sweden"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=OKPy65EAAAAJ"
   email            : "andlydakis@gmail.com"
