--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Andreas Lydakis"
   avatar           : "profile.jpg"
-  bio              : "Senior Software Enginer - Scania Group"
+  bio              : "Senior Software Engineer - Scania Group"
   location         : "Stockholm, Sweden"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=OKPy65EAAAAJ"
